--- a/README.template
+++ b/README.template
@@ -1,6 +1,8 @@
+<PROJECT_NAME>
+==============
+
 This directory contains the results for the project "<PROJECT_NAME>".  The top-level directory was created on <DATE>.
 
--------------
 PREREQUISITES
 -------------
 
@@ -8,10 +10,8 @@ To run this analysis, you will need the following software packages:
 
 1. R (version >= 2.15.2).
 2. knitr (an R package, can be installed from within R by typing "install.packages('knitr')").
-3. MacTeX (or another TeX distribution that provides pdflatex, bibtex, and latexmk).
 
 
---------------------
 REGENERATING RESULTS
 --------------------
 
@@ -22,31 +22,30 @@ $ ./go ID=<NEW ID> DRY_RUN=0
 This will regenerate all results and place them in the results/<NEW ID> directory, along with a report in "reports/${PROJECT_NAME}.<NEW ID>.pdf".
 
 
---------
 MANIFEST
 --------
 
 The following is a description of the various files and directories found within this project.
 
-go         : High-level script that will reproduce latest results from the raw data.
-bin/       : Contains additional programs necessary for analyzing the data.
-data/      : Raw data files (or links to those files if they come from different projects).
-lists/     : Text lists used during the processing (e.g. file lists, gene lists, etc.).
-results/   : The analysis product for the raw data.  Many runs may exist in this directory.
-reports/   : The PDF report for a particular analysis run.
-resources/ : Files that may be useful during analysis (e.g. gene models, sample metadata, etc.).
-scratch/   : A space to keep temporary files that do not have a critical role in the analysis.  Safe to discard.
-scripts/   : Code to help process data at various stages of the analysis.
+|File       |Description                                                                                         |
+|:----------|:---------------------------------------------------------------------------------------------------|
+|go         |High-level script that will reproduce latest results from the raw data.                             |
+|bin/       |Contains additional programs necessary for analyzing the data.                                      |
+|data/      |Raw data files (or links to those files if they come from different projects).                      |
+|lists/     |Text lists used during the processing (e.g. file lists, gene lists, etc.).                          |
+|results/   |The analysis product for the raw data.  Many runs may exist in this directory.                      |
+|reports/   |Analyses on various results sets.                                                                   |
+|resources/ |Files that may be useful during analysis (e.g. gene models, sample metadata, etc.).                 |
+|scratch/   |A space to keep temporary files that do not have a critical role in the analysis.  Safe to discard. |
+|scripts/   |Code to help process data at various stages of the analysis.                                        |
 
 
-------
 AUTHOR
 ------
 
 Please contact Kiran V Garimella (kiran@well.ox.ac.uk) with any questions, comments, or concerns.
 
 
------------------------------
 COMMITMENT TO REPRODUCIBILITY
 -----------------------------
 
